--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,13 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 123455678990
+                Call : 418-575-5541
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : demo@gmail.com
+                Email : serge@gmail.com
               </span>
             </a>
           </div>
@@ -93,7 +93,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Contact Us
+          Support Us
         </h2>
       </div>
       <div class="row">
@@ -161,7 +161,7 @@
                       <i class="fa fa-phone" aria-hidden="true"></i>
                     </div>
                     <p>
-                      +02 1234567890
+                      418-575-5541
                     </p>
                   </div>
                 </a>
@@ -173,7 +173,7 @@
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                     </div>
                     <p>
-                      demo@gmail.com
+                      serge@gmail.com
                     </p>
                   </div>
                 </a>
