--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 123455678990
+                Call : +01 418-575-5541
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : demo@gmail.com
+                Email : serge@gmail.com
               </span>
             </a>
           </div>
@@ -99,7 +99,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui harum voluptatem adipisci. Quos molestiae saepe dicta nobis pariatur, tempora iusto, ad possimus soluta hic praesentium mollitia consequatur beatae, aspernatur culpa.
               </p>
               <a href="">
-                Contact Us
+                Support Us
               </a>
             </div>
           </div>
@@ -423,7 +423,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Contact Us
+          Support Us
         </h2>
       </div>
       <div class="row">
@@ -491,7 +491,7 @@
                       <i class="fa fa-phone" aria-hidden="true"></i>
                     </div>
                     <p>
-                      +02 1234567890
+                      418-575-5541
                     </p>
                   </div>
                 </a>
@@ -503,7 +503,7 @@
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                     </div>
                     <p>
-                      demo@gmail.com
+                      serge@gmail.com
                     </p>
                   </div>
                 </a>
