--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
     </div>
     <div class="social-box">
       <h4>
-        Follow Us
+        Support Us
       </h4>
       <div class="box">
         <a href="">
